<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>de.tu_berlin.dima</groupId>
		<artifactId>nerdle</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	<artifactId>nerdle-core</artifactId>
	<name>nerdle-core</name>

	<repositories>
		<repository>
			<id>project.local</id>
			<name>project</name>
			<url>file:${project.basedir}/repo</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>16.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.2.4</version>
		</dependency>
<!-- 		<dependency> -->
<!-- 			<groupId>com.rockymadden.stringmetric</groupId> -->
<!-- 			<artifactId>stringmetric-core</artifactId> -->
<!-- 			<version>0.25.3</version> -->
<!-- 		</dependency> -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>2.0</version>
		</dependency>

		<!-- tinkerpop dependencies -->

		<dependency>
			<groupId>com.tinkerpop.blueprints</groupId>
			<artifactId>blueprints-core</artifactId>
			<version>2.4.0</version>
		</dependency>
<!-- 		<dependency> -->
<!-- 			<groupId>com.tinkerpop.blueprints</groupId> -->
<!-- 			<artifactId>blueprints-graph-jung</artifactId> -->
<!-- 			<version>2.4.0</version> -->
<!-- 		</dependency> -->
		<dependency>
			<groupId>com.tinkerpop.gremlin</groupId>
			<artifactId>gremlin-java</artifactId>
			<version>2.4.0</version>
		</dependency>
		<dependency>
			<groupId>com.tinkerpop.blueprints</groupId>
			<artifactId>blueprints-neo4j-graph</artifactId>
			<version>2.4.0</version>
		</dependency>

		<dependency>
			<groupId>com.tinkerpop.blueprints</groupId>
			<artifactId>blueprints-neo4jbatch-graph</artifactId>
			<version>2.2.0</version>
		</dependency>

		<!-- clearnlp -->

		<dependency>
			<groupId>com.clearnlp</groupId>
			<artifactId>clearnlp</artifactId>
			<version>2.0.2</version>
		</dependency>

		<dependency>
			<groupId>com.clearnlp</groupId>
			<artifactId>clearnlp-dictionary</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<groupId>com.clearnlp</groupId>
			<artifactId>clearnlp-general-en-dep</artifactId>
			<version>1.2</version>
		</dependency>

		<dependency>
			<groupId>com.clearnlp</groupId>
			<artifactId>clearnlp-general-en-pos</artifactId>
			<version>1.1</version>
		</dependency>

		<dependency>
			<groupId>com.clearnlp</groupId>
			<artifactId>clearnlp-general-en-srl</artifactId>
			<version>1.1</version>
		</dependency>

<!-- 		<dependency> -->
<!-- 			<groupId>edu.washington.cs.knowitall.nlptools</groupId> -->
<!-- 			<artifactId>nlptools-coref-stanford_2.10</artifactId> -->
<!-- 			<version>2.4.4</version> -->
<!-- 			<type>jar</type> -->
<!-- 		</dependency> -->

		<!-- Evaluation -->
		<dependency>
			<groupId>de.tu_berlin.dima</groupId>
			<artifactId>qaeval</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>

		<!-- Postgres -->

		<dependency>
			<groupId>postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>9.1-901.jdbc4</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<forkCount>1</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xms2048m -Xmx4096m -XX:MaxPermSize=4096m</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<outputFile>
								${project.build.directory}/${project.artifactId}-${project.version}-job.jar
							</outputFile>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>